tests/errors/map_index_non_string.dang
# This should fail: maps are indexed by String!, not Int!
let m: Map[Int!] = ["a": 1]
let bad = m[0]
